# APOD_wallpaper

./: .gitignore  README.md  apod_wallpaper.py  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  tox.ini
.github/workflows/: tests.yml
apod/: __init__.py  apod_image.py  apod_web.py  exceptions.py
src/: __init__.py  apod.py  apod_image.py  apod_web.py
tests/: test_apod.py  test_apod_image.py  test_apod_web.py
