[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "apod"
authors = [{name = "Juan Carlos Aranda Huecas", email = "juanki0396@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/Juanki0396/APOD_wallpaper"